--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "cryptoproject",
     "private": true,
     "scripts": {
+        "install": "npm install --prefix frontend",
         "build": "npm run build --prefix frontend",
         "start": "node backend/src/server.js"
     },
