--- a/vercel.json
+++ b/vercel.json
@@ -19,6 +19,9 @@
             "dest": "/api/$1"
         },
         {
+            "handle": "filesystem"
+        },
+        {
             "src": "/(.*)",
             "dest": "/frontend/$1"
         }
